--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ html {
     font-family: Linear;
     color: #fff;
     background-color: #000000;
+    scroll-behavior: smooth;
+
 }
 
 .Offenz-Logo {
@@ -15,15 +17,23 @@ html {
 }
 
 /* NavBar Start */
+
+body::-webkit-scrollbar{
+  display: none;
+}
+
 .nav {
     height: 50px;
     width: 100%;
     background-color: #000000;
-    position: relative;
+    position: relative;  
+    overflow-y: unset; /* Hide vertical scrollbar */
+    overflow-x: unset; /* Hide horizontal scrollbar */
   }
   
   .nav > .nav-header {
     display: inline;
+    overflow: hidden;
   }
   
   .nav > .nav-header > .nav-title {
@@ -41,7 +51,7 @@ html {
     display: inline;
     float: right;
     font-size: 18px;
-  }
+    }
   
   .nav > .nav-links > a {
     display: inline-block;
@@ -51,14 +61,19 @@ html {
   }
   
   .nav > .nav-links > a:hover {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: #6200ff
   }
   
   .nav > #nav-check {
     display: none;
   }
-  
+
   @media (max-width:600px) {
+
+    body::-webkit-scrollbar{
+      display: none;
+    }
+      
     .nav > .nav-btn {
       display: inline-block;
       position: absolute;
@@ -106,24 +121,63 @@ html {
 /* NavBar End */
 
 /*Footer Start*/
-footer {
-    background-color: #000;
-    color: #fff;
-    display: flex;
-    justify-content: left;
-    padding: 20px;
-    }
+.footer-ul {
+  display: inline-grid;
+  grid-auto-flow: row;
+  grid-gap: 24px;
+  justify-items: center;
+  margin: auto;
+  list-style-type: none; 
+}
+
+@media (min-width: 500px) {
+  .footer-ul {
+    grid-auto-flow: column;
+
+  .footer-div {
     
-    footer ul {
-    display: flex;
-    list-style: none;
-    flex-direction: row;
-    }
-    
-    footer ul li a img {
-    width: 30px;
-    height: 30px;
-    object-fit: cover;
-    border-radius: 50%;
-    }
+  }
+  }
+}
+
+.footer-a {
+  color: white;
+  text-decoration: none;
+  box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
+}
+
+.footer-a:hover {
+  box-shadow: inset 0 -1.2em 0 hsla(0, 0%, 100%, 0.4);
+}
+
+.footer-li:last-child {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.footer-li:hover ~ li p {
+  animation: wave-animation 0.3s infinite;
+}
+
+/* below is just for demo styling */
+
+.footer-div {
+  display: flex;
+  width: 100%;
+  line-height: 1.3;
+}
+
+
+@keyframes wave-animation {
+  0%,
+  100% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(20deg);
+  }
+  75% {
+    transform: rotate(-15deg);
+  }
+}
 /*Footer End*/
